<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="pl.edu.pwr.dawidszewczyk.lab1.lab1.MainActivity">

        <Spinner
            android:id="@+id/sUnits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/default_font_size" />

        <TextView
            android:id="@+id/tvMass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sUnits"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/mass"
            android:textSize="@dimen/default_font_size" />

        <TextView
            android:id="@+id/tvMassUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/sUnits"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/kilograms"
            android:textSize="@dimen/default_font_size" />

        <EditText
            android:id="@+id/etMass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tvMass"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_toEndOf="@id/tvMass"
            android:layout_toLeftOf="@id/tvMassUnit"
            android:layout_toRightOf="@id/tvMass"
            android:layout_toStartOf="@id/tvMassUnit"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:maxLength="8"
            android:textSize="@dimen/default_font_size" />

        <TextView
            android:id="@+id/tvHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvMass"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/height"
            android:textSize="@dimen/default_font_size" />

        <TextView
            android:id="@+id/tvHeightUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/tvMass"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/meters"
            android:textSize="@dimen/default_font_size" />

        <EditText
            android:id="@+id/etHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tvHeight"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_toEndOf="@id/tvHeight"
            android:layout_toLeftOf="@id/tvHeightUnit"
            android:layout_toRightOf="@id/tvHeight"
            android:layout_toStartOf="@id/tvHeightUnit"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:maxLength="8"
            android:textSize="@dimen/default_font_size" />

        <Button
            android:id="@+id/btnCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvHeight"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:onClick="onBtnCountClick"
            android:text="@string/count"
            android:textSize="@dimen/default_font_size" />

        <TextView
            android:id="@+id/tvBMI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnCount"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:text="@string/BMI"
            android:textSize="@dimen/default_font_size" />

        <TextView
            android:id="@+id/tvBMIResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvBMI"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:textSize="@dimen/default_font_size" />

    </RelativeLayout>
</ScrollView>